Fixed design issue regarding scrollbar

--- a/src/components/Template/styles.module.scss
+++ b/src/components/Template/styles.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   scroll-behavior: smooth;
-  overflow: scroll;
+  overflow: auto;
   height: 100vh;
 
   @media (min-width: 992px) {
